Fixed tutorial 4 and dialouge alignment

--- a/src/utils/Dialogue.css
+++ b/src/utils/Dialogue.css
@@ -47,7 +47,7 @@
     position: fixed;
     top: 5%;
     left: 50%;
-    transform: translate(-50%, 0%) rotate(-0.5deg);
+    transform: translate(-50%, 0%) rotate(0.5deg);
 }
 
 .dialogue_text_icon-wrapper {
